Fix about section font sizing and column spacing

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -163,6 +163,9 @@ $section-background: #3e4e4a;
       padding-top: 60px;
       color: white;
     }
+    ul {
+      font-size: 18px;
+    }
     img {
       height: 300px;
       width: 300px;
@@ -174,7 +177,7 @@ $section-background: #3e4e4a;
 
   #contact {
     background-color: $section-background;
-    padding-bottom: 50px;
+    padding-bottom: 35px;
     margin-top: 80px;
     h2 {
       margin: 0;
@@ -248,6 +251,12 @@ $section-background: #3e4e4a;
       }
       .recipe-buttons {
         padding-top: 19px;
+      }
+    }
+    #about {
+      padding-bottom: 0px;
+      div.col-sm {
+        padding-bottom: 80px;
       }
     }
     #contact {
